[FIX] <pro>Output: Fix floating label display issue when content wraps.

--- a/components-pro/output/style/index.less
+++ b/components-pro/output/style/index.less
@@ -41,21 +41,15 @@
     line-height: @float-label-height-base;
   }
 
-  &-float-label + .@{field-label-prefix-cls}-wrapper {
-    position: relative;
-
-    .@{field-label-prefix-cls} {
-      position: absolute;
-      top: -(@float-label-height-base + @output-float-label-line-height / 2);
-      width: 100%;
-      padding: 0;
-      overflow: hidden;
-      color: inherit;
-      font-weight: @output-font-weight;
-      font-size: @output-float-label-font-size;
-      line-height: @output-float-label-line-height;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
+  &-float-label > .@{field-label-prefix-cls}-wrapper > .@{field-label-prefix-cls} {
+    width: 100%;
+    padding: 0;
+    overflow: hidden;
+    color: inherit;
+    font-weight: @output-font-weight;
+    font-size: @output-float-label-font-size;
+    line-height: @output-float-label-line-height;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
